# OpenNI2Sample

./: README.md
sample/Color/: CMakeLists.txt  device.cpp
sample/Depth/: CMakeLists.txt  device.cpp
sample/Infrared/: CMakeLists.txt  device.cpp  device.h
sample/Multi/: CMakeLists.txt  device.cpp  device.h  main.cpp  multidevice.cpp  multidevice.h
sample/PointCloud/: CMakeLists.txt  device.cpp
sample/Record/: CMakeLists.txt  device.cpp  device.h
sample/Regist/: CMakeLists.txt  device.cpp
